# Pallet_jack_project

./: .README.md.swp  .gitattributes  CMakeLists.txt  LICENSE  Mass-CenterOfGravity.xlsx  README.md
encoderPlugin/: CMakeLists.txt  EncoderPlugin.cc
launch/: pallet_jack_gazebo.launch
pallet_jack/: model.config  package.xml  pallet_jack.sdf
pallet_jack/launch/: pallet_jack_animation.launch
pallet_jack/my_box/: model.config
pallet_jack/plugins/: .kdev_include_paths  CMakeLists.txt  LaserPlugin.cc  LaserPlugin.hh  LiftPlugin.cc  LiftPlugin.hh  pallet_animation.cc  pallet_animation.hh
pallet_jack/worlds/: pallet_jack_gazebo.world
ros-gps-plugin/: README.md  model.sdf
ros-gps-plugin/doc/: ros-gps-plugin-doc.lyx
ros-gps-plugin/faultygps/: CMakeLists.txt  FaultyGPSPlugin.cc  FaultyGPSPlugin.hh
ros-navigation/: README.md  rviz_conf.rviz
ros-navigation/doc/: ros-navigation.lyx
ros-navigation/willy3_2dnav/: CMakeLists.txt  package.xml
ros_turtlebot_pilot/: .cproject  .gitignore  .project  CMakeLists.txt  README.md  package.xml
ros_turtlebot_pilot/doc/: ROS Turtlebot Pilot.lyx
ros_turtlebot_pilot/launch/: pilot.launch  pilot_old.launch
ros_turtlebot_pilot/src/: controller.cpp  controller.h  goal_reader.cpp  improved_controller.cpp  improved_controller.h  improved_odometry.cpp  improved_odometry.h  joy_cmd.cpp  joy_cmd.h  joypad_simulator.cpp  joypad_simulator.hh  mux.cpp  mux.h
ros_turtlebot_pilot/srv/: GetMode.srv
turtlesim_actionlib/: CMakeLists.txt  README.md  package.xml
turtlesim_actionlib/action/: DrawPolygon.action
(+13 files in other folders)
